force-app/main/default/objects/MID_Master_Parameter__c/fields/dataClientKey__c.field-meta.xml
<CustomField>
    <fullName>dataClientKey__c</fullName>
    <label>dataClientKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>