force-app/main/default/objects/MID_Master_Parameter__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Template</label>
    <referenceTo>Email_SMS_Template__c</referenceTo>
    <relationshipLabel>MID_Master_Parameter</relationshipLabel>
    <relationshipName>MID_Master_Parameter</relationshipName>
    <type>Lookup</type>
</CustomField>