force-app/main/default/objects/MID_Master_Parameter__c/fields/Email_Template_with_BO__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_with_BO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Template with BO</label>
    <referenceTo>Email_SMS_Template__c</referenceTo>
    <relationshipLabel>MID_Master_Parameter (Email Template with BO)</relationshipLabel>
    <relationshipName>MID_Master_Parameter1</relationshipName>
    <type>Lookup</type>
</CustomField>