force-app/main/default/objects/MID_Master_Parameter__c/fields/gross_amount__c.field-meta.xml
<CustomField>
    <fullName>gross_amount__c</fullName>
    <label>gross_amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>