force-app/main/default/objects/MID_Master_Parameter__c/fields/Order_Code__c.field-meta.xml
<CustomField>
    <fullName>Order_Code__c</fullName>
    <label>Order Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>