force-app/main/default/objects/MID_Master_Parameter__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>private</fullName>
            </value>
            <value>
                <fullName>credit_card</fullName>
            </value>
            <value>
                <fullName>saving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>