force-app/main/default/objects/MID_Master_Parameter__c/fields/RTC_01__c.field-meta.xml
<CustomField>
    <fullName>RTC_01__c</fullName>
    <label>RTC 01</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>