force-app/main/default/objects/MID_Master_Parameter__c/fields/snapJs__c.field-meta.xml
<CustomField>
    <fullName>snapJs__c</fullName>
    <label>snapJs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>