force-app/main/default/objects/MID_Master_Parameter__c/fields/TC_01__c.field-meta.xml
<CustomField>
    <fullName>TC_01__c</fullName>
    <label>TC 01</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>