force-app/main/default/objects/MID_Master_Parameter__c/fields/TC_02__c.field-meta.xml
<CustomField>
    <fullName>TC_02__c</fullName>
    <label>TC 02</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>