force-app/main/default/objects/MID_Master_Parameter__c/fields/TC_03__c.field-meta.xml
<CustomField>
    <fullName>TC_03__c</fullName>
    <label>TC 03</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>